--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
     "@babel/plugin-proposal-private-property-in-object":"^7.21.11",
+    "express": "^4.18.1",
+    "animate.css": "^4.1.1",
+    "nodemailer": "^6.7.5",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "react": "^18.1.0",
