Rever server.js

--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "serve": "node server.js"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
