Remove unused import

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -15,7 +15,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: echo "DISCORD_WEBHOOK_URL=${{vars.DISCORD_WEBHOOK_URL}}" >> .env
       - run: yarn build
       - run: yarn test
 
@@ -34,4 +33,4 @@ jobs:
       - run: yarn start
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          DISCORD_WEBHOOK_URL: ${{vars.DISCORD_WEBHOOK_URL}}
+          DISCORD_WEBHOOK_URL: ${{secrets.DISCORD_WEBHOOK_URL}}
