Fix Discord Messager

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,10 +17,10 @@ jobs:
           node-version: 20
       - name: Inject Environment Variable
         run: |
-            echo "DISCORD_WEBHOOK_URL=${{secrets.DISCORD_WEBHOOK_URL}}" >> .env
+            echo "DISCORD_WEBHOOK_URL=${{env.DISCORD_WEBHOOK_URL}}" >> .env
       - run: yarn build
         env:
-          DISCORD_WEBHOOK_URL: ${{secrets.DISCORD_WEBHOOK_URL}}
+          DISCORD_WEBHOOK_URL: ${{env.DISCORD_WEBHOOK_URL}}
       - run: yarn test
 
   publish-gpr:
@@ -35,10 +35,7 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
-      - name: Inject Environment Variable
-        run: |
-          echo "DISCORD_WEBHOOK_URL=${{secrets.DISCORD_WEBHOOK_URL}}" >> .env
       - run: yarn start
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          DISCORD_WEBHOOK_URL: ${{secrets.DISCORD_WEBHOOK_URL}}
+          DISCORD_WEBHOOK_URL: ${{env.DISCORD_WEBHOOK_URL}}
