Cleanup: Remove Unused Code

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "opnCore",
-  "name": "Cloting React App",
+  "name": "opnCore Engineering",
   "icons": [
     {
       "src": "opnCore.png",
