--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "file-loader": "^6.2.0",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.9"
   }
 }
