--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^9.118.0",
     "@react-three/fiber": "^8.17.10",
@@ -16,6 +17,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
     "express": "^4.21.2",
     "lil-gui": "^0.20.0",
     "react": "^18.1.0",
