--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.2",
     "react-dom": "^18.1.0",
+    "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
     "react-responsive-carousel": "^3.2.23",
