--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   publish = "build"
   command = "npm run build"
+  environment = { DISABLE_ESLINT_PLUGIN = "true", CI = "false" }
 
 [[redirects]]
   from = "/*"
